--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,28 @@
 ---
 services:
-  data_loader:
+  loader-runner:
     build:
       context: .
+    environment:
+      DEPLOY_START_TIME: "${DEPLOY_START_TIME}"
+      FDS_LOADER_PATH: "${FDS_LOADER_PATH}"
+      FDS_LOADER_SOURCE_PATH: "${FDS_LOADER_SOURCE_PATH}"
+      FDS_LOADER_ZIP_FILENAME: "${FDS_LOADER_ZIP_FILENAME}"
+      LOG_LEVEL: "${LOG_LEVEL}"
+      MACHINE_CORES: "${MACHINE_CORES}"
+      PGDATABASE: "${PGDATABASE}"
+      PGHOST: "${PGHOST}"
+      PGPASSWORD: "${PGPASSWORD}"
+      PGPASSWORD_ENCRYPTED: "${PGPASSWORD_ENCRYPTED}"
+      PGUSER: "${PGUSER}"
+      WORKINGSPACEPATH: "${WORKINGSPACEPATH}"
     volumes:
       - type: bind
-        source: factset-loader
-        target: /mnt/factset-loader
+        source: mounts/workingspace
+        target: "${WORKINGSPACEPATH}"
+      - type: bind
+        source: mounts/factset-loader
+        target: "${FDS_LOADER_SOURCE_PATH}"
     depends_on:
       - db
     tty: true
@@ -17,6 +33,6 @@ services:
     # hostname: pacta-factset.example.com
     hostname: pacta-factset.postgres.database.azure.com
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_DB: fds
-      POSTGRES_PASSWORD: SuperSecret1234
+      POSTGRES_USER: "${PGUSER}"
+      POSTGRES_DB: "${PGDATABASE}"
+      POSTGRES_PASSWORD: "${PGPASSWORD}"
