Add script to unpack and configure FDSLoader

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
       context: .
     environment:
       DEPLOY_START_TIME: "${DEPLOY_START_TIME}"
+      FACTSET_SERIAL: "${FACTSET_SERIAL}"
+      FACTSET_USER: "${FACTSET_USER}"
       FDS_LOADER_PATH: "${FDS_LOADER_PATH}"
       FDS_LOADER_SOURCE_PATH: "${FDS_LOADER_SOURCE_PATH}"
       FDS_LOADER_ZIP_FILENAME: "${FDS_LOADER_ZIP_FILENAME}"
