--- a/example.env
+++ b/example.env
@@ -1,4 +1,6 @@
 DEPLOY_START_TIME="$(date +%Y%m%d%H%M%S)"
+FACTSET_SERIAL=123456
+FACTSET_USER="FOOUSER"
 FDS_LOADER_PATH="/home/fdsrunner"
 FDS_LOADER_SOURCE_PATH="/mnt/factset-loader"
 FDS_LOADER_ZIP_FILENAME="FDSLoader-Linux-2.13.6.0.zip"
