Add script to prepare and install DSN

--- a/example.env
+++ b/example.env
@@ -1,4 +1,4 @@
-DEPLOY_START_TIME="$(date +%Y%m%d%H%M%S)"
+DEPLOY_START_TIME="20000101T000000"
 FACTSET_SERIAL=123456
 FACTSET_USER="FOOUSER"
 FDS_LOADER_PATH="/home/fdsrunner"
