--- a/system/etc/DSN-template.ini
+++ b/system/etc/DSN-template.ini
@@ -1,6 +1,6 @@
 [FDSLoader]
 Driver = PostgreSQL Unicode
 Description = Used by FactSet for DataFeed Loader
-SERVERNAME = pacta-factset.postgres.database.azure.com
+SERVERNAME = {DATABASE_SERVER}
 PORT = 5432
-Database = fds
+Database = {DATABASE_NAME}
