add SSLmode for connection to Azure DB

--- a/system/etc/DSN-template.ini
+++ b/system/etc/DSN-template.ini
@@ -4,3 +4,4 @@ Description = Used by FactSet for DataFeed Loader
 SERVERNAME = {DATABASE_SERVER}
 PORT = 5432
 Database = {DATABASE_NAME}
+SSLMODE = require
